# latihan-ci

./: pyproject.toml
.github/workflows/: main.yml
MLproject/: MLproject  conda.yaml  modelling.py
mlruns/0/: meta.yaml
mlruns/0/8d5783f2c6ac4befa396f3f83dad590b/: meta.yaml
mlruns/0/8d5783f2c6ac4befa396f3f83dad590b/metrics/: accuracy
mlruns/0/8d5783f2c6ac4befa396f3f83dad590b/outputs/m-b30c37cc44884c5aabffc7aa8980e136/: meta.yaml
mlruns/0/8d5783f2c6ac4befa396f3f83dad590b/tags/: mlflow.runName  mlflow.source.git.repoURL  mlflow.source.name
mlruns/0/models/m-b30c37cc44884c5aabffc7aa8980e136/: meta.yaml
mlruns/0/models/m-b30c37cc44884c5aabffc7aa8980e136/artifacts/: MLmodel  conda.yaml  python_env.yaml
mlruns/0/models/m-b30c37cc44884c5aabffc7aa8980e136/tags/: mlflow.source.git.commit
