[project]
name = "credit-scoring"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Lutfi Amin Ghifarullah",email = "ghifarullah11@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "mlflow (>=3.6.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
